fix: header z-index

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -24,6 +24,7 @@ body {
     height: 50px;
     background-color: $color-main;
     color: $text-color-main;
+    z-index: 1;
 
     .btn-menu {
         color: $color-main;
@@ -143,16 +144,7 @@ body {
     max-width: 100%;
 }
 
-.slider__item>div::before {
-    content: counter(slide);
-    position: absolute;
-    top: 10px;
-    right: 20px;
-    color: #fff;
-    font-style: italic;
-    font-size: 32px;
-    font-weight: bold;
-}
+
 
 
 
@@ -193,6 +185,6 @@ body {
     }
 
     .slider__items {
-        height: 300px;
+        height: 350px;
     }
 }
